<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    tools:context=".view.profile.ProfileFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivDetailProfile"
            android:layout_width="166dp"
            android:layout_height="166dp"
            android:src="@drawable/ic_avatar"
            app:civ_border_color="#053F5C"
            app:civ_border_width="3dp" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:fontFamily="@font/medium"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="20"
            android:text="@string/name"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/medium"
            android:text="@string/email"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_profile"
            android:drawableEnd="@drawable/ic_edit"
            android:drawableTint="@color/white"
            android:text="@string/edit_profile"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_profile"
            android:drawableEnd="@drawable/ic_settings"
            android:text="@string/Settings"
            android:drawableTint="@color/white"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_profile"
            android:drawableRight="@drawable/ic_info"
            android:text="@string/about_anna"
            android:drawableTint="@color/white"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_profile"
            android:drawableEnd="@drawable/ic_logout"
            android:text="@string/logout"
            android:drawableTint="@color/white"
            android:textAlignment="textStart"
            android:textSize="14sp" />

    </LinearLayout>


</FrameLayout>
